force-app/main/default/objects/Notiforce_IF_INFO__c/fields/CALLING__c.field-meta.xml
<CustomField>
    <fullName>CALLING__c</fullName>
    <description>false</description>
    <label>CALLING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>