force-app/main/default/objects/Notiforce_IF_INFO__c/fields/CYCLE__c.field-meta.xml
<CustomField>
    <fullName>CYCLE__c</fullName>
    <label>CYCLE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>realtime</fullName>
            </value>
            <value>
                <fullName>batch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>