force-app/main/default/objects/Notiforce_IF_INFO__c/fields/FORCE_LOGGING__c.field-meta.xml
<CustomField>
    <fullName>FORCE_LOGGING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FORCE_LOGGING</label>
    <type>Checkbox</type>
</CustomField>