force-app/main/default/objects/Notiforce_IF_INFO__c/fields/FROM__c.field-meta.xml
<CustomField>
    <fullName>FROM__c</fullName>
    <description>false</description>
    <label>FROM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>