force-app/main/default/objects/Notiforce_IF_INFO__c/fields/IF_ID__c.field-meta.xml
<CustomField>
    <fullName>IF_ID__c</fullName>
    <description>외부 용 IF ID</description>
    <label>External IF ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>