force-app/main/default/objects/Notiforce_IF_INFO__c/fields/TARGET_SYSTEM__c.field-meta.xml
<CustomField>
    <fullName>TARGET_SYSTEM__c</fullName>
    <description>false</description>
    <label>TARGET_SYSTEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>