force-app/main/default/objects/Notiforce_IF_INFO__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>false</description>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>